--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements-to-freeze.txt
@@ -63,7 +63,7 @@ distributed
 #but we can't move it in layer python3 because circus (layer python3_circus)
 #requires tornado 4.5.2
 scikit-image
-reportlab
+reportlab>3.6.12
 climetlab
 pygraphviz
 cf-units
