--- a/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
+++ b/layers/layer4_python3_scientific/0500_extra_packages/requirements3.txt
@@ -41,7 +41,7 @@ fasteners==0.19
 fastparquet==2023.10.1
 ffmpy==0.3.1
 findlibs==0.0.5
-Fiona==1.9.5
+Fiona==1.10b3
 Flask==3.0.0
 flatten-dict==0.4.2
 FLORIS==3.5
